--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,9 @@ envlist=py26,py27,py31,py32,py33
  
 [testenv]
 deps=
-    git+git://github.com/campadrenalin/DoctestAll.git#egg=master
+    git+git://github.com/campadrenalin/DoctestAll.git#egg=doctestall
 commands=
     {envpython} setup.py --quiet build install
     doctestall persei
+    {envpython} tests.py
 sitepackages=False
